# dne-project

./: .gitignore  README.md  main.tex  pyproject.toml
.devcontainer/: devcontainer.json
backup-notebooks/: OLD_train_cartpole_with_dqn.ipynb  train_cartpole_with_dqn.ipynb
src/: LLM Cartpole data analysis.ipynb  LLM blackjack data analysis.ipynb
src/blackjack/: play_blackjack_RandomAction.ipynb  play_blackjack_Zephyr3B.ipynb  play_blackjack_phi-2.ipynb  play_blackjack_random.ipynb  train_blackjack_with_dqn.ipynb  train_blackjack_with_q_learning.ipynb  training_blackjack_dqn.ipynb  training_blackjack_ppo.ipynb
src/cartpole/: play_cartpole_Zephyr3B.ipynb  play_cartpole_phi-2.ipynb  play_cartpole_random.ipynb  train_cartpole_with_dqn.ipynb  train_with_dqn.ipynb  training_cartpole_dqn.ipynb  training_cartpole_ppo.ipynb
src/data/: BlackJackLlm.csv  BlackJackLlmTotal20240425-2021.csv  CartPoleLlm_Total_20240417-124445.csv  CartPoleLlm_Total_20240426-115006.csv  play_blackjack_Zephyr3B.ipynb
src/tic_tac_toe/: tictactoe_LLM_Agent.ipynb  training.ipynb  training_tictactoe_dnq.ipynb  training_tictactoe_dqn_play_llm.ipynb
test-notebooks/: StableLM Zephyr 3B_Test-BlackJack.ipynb  StableLM Zephyr 3B_Test-CartPole.ipynb  StableLM Zephyr 3B_Test.ipynb  cartpole.ipynb  test phi-2.ipynb
