[tool.poetry]
name = "dne-project"
version = "1.0.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
  {include = "tic_tac_toe", from="src"}
]

[tool.poetry.dependencies]
python = "^3.10"
torch = "2.2.0"
gymnasium = "0.29.1"
numpy = "^1.26.4"
pygame = "2.3.0"
pettingzoo = "1.24.3"
tianshou = "^0.5.1"
transformers = "^4.39.1"
accelerate = "^0.28.0"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
